# arduino_robot_arm_gripper

./: README.md
arduino_code/: arduino_code.ino
arm_pkg/: CMakeLists.txt  package.xml
arm_pkg/config/: ros_controllers.yaml
arm_pkg/launch/: check_motors.launch  check_motors_gazebo.launch  gazebo_urdf.launch  rviz_urdf.launch
arm_pkg/meshes/: Arm 03.001.stl  Arm 03.stl  Gripper1.002.stl  Gripper1.stl  Gripper2.stl  gear1.stl  gear2.stl
arm_pkg/scripts/: joint_states_to_gazebo.py
arm_pkg/urdf/: arduino_robot_arm.urdf  arm.urdf
moveit_config_pkg/: CMakeLists.txt  package.xml
moveit_config_pkg/config/: arduino_robot_arm.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
moveit_config_pkg/launch/: arduino_robot_arm_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
moveit_config_pkg/scripts/: color_thresholding.py  find_color.py  get_pose.py  ‏‏move_group_once.py
moveit_config_pkg/src/: moveGroupInterface.cpp
